<resources>
    <string name="app_name">Wisvivo</string>
    <string name="blow_router">Device</string>
    <string name="blow_system">System</string>
    <string name="blow_system_setting">System Setting</string>
    <string name="blow_tool">Tools</string>
    <string name="not_wifi">Wi-Fi disconnected,please connect to it first.</string>
    <string name="conn_router">Please Connect to Wisvivo Wi-Fi</string>
    <string name="reconn_router">Disconnect and routers,please connect again</string>
    <string name="btn_conn_wifi">Connect to Wi-Fi</string>
    <string name="btn_set_new_router">Setting A New Device</string>
    <string name="btn_retry">Scan again</string>
    <string name="search_device">Scanning Wisvivo Devices...</string>
    <string name="search_device_no">No device found</string>
    <string name="find_router_logon">Device Detected,please enter management password</string>
    <string name="input_password">please enter management password</string>
    <string name="input_password_wifi">please enter Wi-Fi password</string>
    <string name="input_password2">please enter password</string>
    <string name="input_name">please enter username</string>
    <string name="input_wifi_name">please enter Wi-Fi Name</string>
    <string name="bind">connect</string>
    <string name="cancel">cancel</string>
    <string name="next">Next</string>
    <string name="pppoe">PPPoE Dia-up</string>
    <string name="dynamic">Auto/Dynamic IP</string>
    <string name="static_state">Static IP</string>
    <string name="select_login">Internet Connection</string>
    <string name="broadband_conn">PPPoE</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_success">You are online</string>
    <string name="login_success_msg">Internet is available,please go to next step</string>
    <string name="set_password">Setting Wi-Fi</string>
    <string name="wifi_name">Wi-Fi Name / SSID</string>
    <string name="wifi_name_note"> </string>
    <string name="admin_password_note">(Same with Management Password)</string>
    <string name="admin_password">Management Password</string>
    <string name="input_admin_password">managing passwords two times inconsistent</string>
    <string name="wifi_password">Wi-Fi Password</string>
    <string name="old_admin_password">Incorrect original password.</string>
    <string name="reset_admin_password_fail">Reset administrator password failed.</string>
    <string name="wifi_password_error">Password error</string>
    <string name="wifi_password_error_not_equal_oldpwd">The password has been reset. Please enter a new password.</string>
    <string name="input_wifi_password">Wi-Fi passwords two times inconsistent</string>
    <string name="wifi_password_note"> </string>
    <string name="admin_password_reconfirm">Confirm Password</string>
    <string name="wifi_password_reconfirm">Confirm Password</string>
    <string name="btn_ok">Done</string>
    <string name="set_password_after">Once finished Wi-Fi setting,your phone will lose connection and need reconnect to new Wi-fi signal just configured.</string>
    <string name="set_ok">set successfully</string>
    <string name="set_fail">Set failed</string>
    <string name="quit_app">Do you want to quit the program?</string>
    <string name="quit_sure">Sure</string>
    <string name="quit_cancel">Cancel</string>
    <string name="router_terminal">Users</string>
    <string name="router_intelligent_device">Devices</string>
    <string name="router_upload_speed">Upload Speed</string>
    <string name="router_download_speed">Download Speed</string>
    <string name="router_mobile_phone">Mobile Phone</string>
    <string name="router_airmesh_point">AirMesh Point</string>
    <string name="router_cable">Cable\u3000</string>
    <string name="router_wireless">Wireless</string>
    <string name="router_airmesh">AirMesh</string>
    <string name="left_menu_add">Add</string>
    <string name="menu_rocket_boost">Rocket Boost</string>
    <string name="menu_healthy_mode">Healthy Mode</string>
    <string name="menu_schedule_reboot">Schedule Reboot</string>
    <string name="menu_parental_control">Parent Control</string>
    <string name="menu_green_wifi">Green Wi-Fi</string>
    <string name="menu_blacklist">Blacklist</string>
    <string name="menu_smart_qos">QoS</string>
    <string name="menu_guest_wifi">Guest Wi-Fi</string>
    <string name="menu_wifi">Wi-Fi Setting</string>
    <string name="menu_network">Internet</string>
    <string name="menu_management">Management</string>
    <string name="menu_upgrade_firmware">Firmware</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_led">LED</string>
    <string name="add_a_feature">Add a feature</string>
    <string name="add_ones_available">Add-ones available</string>
    <string name="system_password">Management</string>
    <string name="reboot">Reboot</string>
    <string name="retore_factory">Restore Factory</string>
    <string name="new_version">New version:3.0.0</string>
    <string name="upgrade">Upgrade</string>
    <string name="led_stats">LED Stats</string>
    <string name="wifi_setting">Wi-Fi Setting</string>
    <string name="wifi_2_4">2.4GHz Wi-Fi</string>
    <string name="wifi_ssid">SSID</string>
    <string name="wifi_setting_password">Password</string>
    <string name="wifi_advanced">Advanced Setting</string>
    <string name="wifi_5g">5GHz Wi-Fi</string>
    <string name="network_internet_ok">Internet is available</string>
    <string name="network_internet_not">Internet is not available</string>
    <string name="network_wan_type">WAN Type</string>
    <string name="network_dymanic_ip">Auto/Dynamic IP</string>
    <string name="current_password">Current Passwork</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reboot_btn">Reboot</string>
    <string name="reboot_content">Once reboot,all the users connect to the device will lost connection.It may cost 2 minutes to recover the wireless signal.</string>
    <string name="reboot_reboot">reboot...</string>
    <string name="reboot_router">Reboot Router</string>
    <string name="reboot_router_conetxt">Once reboot,all the users connect to the device will lost connection.</string>
    <string name="restore_factory">Restore</string>
    <string name="restore_factory_ing">Restore...</string>
    <string name="restore_factory_btn">Restore Factory Setting</string>
    <string name="restore_factory_context">Restore the device will clean all device setting and data.</string>
    <string name="tool_list">Tools list</string>
    <string name="rocket_boost">Rocket Boost</string>
    <string name="rocket_boost_ing">Boost..</string>
    <string name="rocket_boost_btn">Boost Now</string>
    <string name="rocket_wifi_quality">Wi-Fi Quality</string>
    <string name="rocket_signal_strength">Signal Strength</string>
    <string name="menu_blacklist_list">Blacklist Users</string>
    <string name="green_speed_mode">Speed Mode</string>
    <string name="green_speed_context">The lowest power consumption</string>
    <string name="green_standard_mode">Standard Mode</string>
    <string name="green_standard_context">Standard power consumption</string>
    <string name="green_boost_mode">Boost Mode</string>
    <string name="green_boost_context">High power mode for longer range</string>
    <string name="green_smart_mode">Smart Mode</string>
    <string name="green_smart_context">Auto adjust Wi-Fi power</string>
    <string name="firmware_context">During the router upgrading,your network will not be able to use for several minutes.Press the button below to check the newest version.</string>
    <string name="firmware_btn">Online Upgrade</string>
    <string name="check_new_version">Checking New Version</string>
    <string name="not_new_version">Your firmware version is up to date.</string>
    <string name="upgrade_up">Upgrade</string>
    <string name="get_new_version">New firmware available to upgrade,version %1$s. Please confirm if upgrade now.</string>
    <string name="smart_upload_speed">Internet Upload Speed</string>
    <string name="smart_download_speed">Internet Download Speed</string>
    <string name="smart_equal_broadband">Equal to 5 Mbps Broadband</string>
    <string name="smart_manual_limit">Manual Speed limit</string>
    <string name="smart_manual_qos">Manual QoS</string>
    <string name="smart_priority">Priority by App</string>
    <string name="smart_auto">Auto</string>
    <string name="smart_guest_qos">Guest Wi-Fi QoS</string>
    <string name="smart_device_list">Device List</string>
    <string name="smart_manual_up">Upload Speed:</string>
    <string name="smart_manual_down">Download Speed:</string>
    <string name="smart_priority_auto">Auto</string>
    <string name="smart_priority_auto_context">Auto adjust the speed for APPs</string>
    <string name="smart_priority_video">Video Priority</string>
    <string name="smart_priority_video_context">Ensure video as high priority in the network</string>
    <string name="smart_priority_gaming">Gaming Priority</string>
    <string name="offline_time_set">Time Setting</string>
    <string name="offline_time_h">h</string>
    <string name="offline_time_min">min</string>
    <string name="find_router">发现子母路由器</string>
    <string name="bind_router">立即绑定</string>
    <string name="find_router_name">ENJIAN_子母路由器</string>
    <string name="user_agreement_c1">\u3000\u3000本协议为您与本APP管理者之间所订立的契约，具有合同的法律效力，请您仔细阅读。</string>
    <string name="user_agreement_c2">一、 本协议内容、生效、变更</string>
    <string name="user_agreement_c3">\u3000\u3000本协议内容包括协议正文及所有本APP已经发布的或将来可能发布的各类规则。所有规则为本协议不可分割的组成部分，与协议正文具有同等法律效力。如您对协议有任何疑问，应向本APP咨询。您在同意所有协议条款并完成注册程序，才能成为本站的正式用户，您点击“我以阅读并同意本APP用户协议和法律协议”按钮后，本协议即生效，对双方产生约束力。  只要您使用本APP平台服务，则本协议即对您产生约束，届时您不应以未阅读本协议的内容或者未获得本APP对您问询的解答等理由，主张本协议无效，或要求撤销本协议。您确认：本协议条款是处理双方权利义务的契约，始终有效，法律另有强制性规定或双方另有特别约定的，依其规定。 您承诺接受并遵守本协议的约定。如果您不同意本协议的约定，您应立即停止注册程序或停止使用本APP平台服务。本APP有权根据需要不定期地制订、修改本协议及/或各类规则，并在本APP平台公示，不再另行单独通知用户。变更后的协议和规则一经在网站公布，立即生效。如您不同意相关变更，应当立即停止使用本APP平台服务。您继续使用本APP平台服务的，即表明您接受修订后的协议和规则。 </string>
    <string name="user_agreement_c4">二、 注册</string>
    <string name="user_agreement_c5">\u3000\u3000注册资格用户须具有法定的相应权利能力和行为能力的自然人、法人或其他组织，能够独立承担法律责任。您完成注册程序或其他本APP平台同意的方式实际使用本平台服务时，即视为您确认自己具备主体资格，能够独立承担法律责任。若因您不具备主体资格，而导致的一切后果，由您及您的监护人自行承担。</string>
    <string name="user_agreement_c6">注册资料</string>
    <string name="user_agreement_c7">\u3000\u3000用户应自行诚信向本站提供注册资料，用户同意其提供的注册资料真实、准确、完整、合法有效，用户注册资料如有变动的，应及时更新其注册资料。如果用户提供的注册资料不合法、不真实、不准确、不详尽的，用户需承担因此引起的相应责任及后果，并且本APP保留终止用户使用本平台各项服务的权利。</string>
    <string name="user_agreement_c8">\u3000\u3000用户在本站进行浏览等活动时，涉及用户真实姓名/名称、通信地址、联系电话、电子邮箱等隐私信息的，本站将予以严格保密，除非得到用户的授权或法律另有规定，本站不会向外界披露用户隐私信息。</string>
    <string name="user_agreement_c9">三、 账户</string>
    <string name="user_agreement_c10">\u3000\u3000您注册成功后，即成为本APP平台的会员，将持有本APP平台唯一编号的账户信息，您可以根据本站规定改变您的密码。</string>
    <string name="user_agreement_c11">\u3000\u3000您设置的姓名为真实姓名，不得侵犯或涉嫌侵犯他人合法权益。否则，本APP有权终止向您提供服务，注销您的账户。账户注销后，相应的会员名将开放给任意用户注册登记使用。</string>
    <string name="user_agreement_c12">\u3000\u3000您应谨慎合理的保存、使用您的会员名和密码，应对通过您的会员名和密码实施的行为负责。除非有法律规定或司法裁定，且征得本APP的同意，否则，会员名和密码不得以任何方式转让、赠与或继承（与账户相关的财产权益除外）。</string>
    <string name="user_agreement_c13">\u3000\u3000用户不得将在本站注册获得的账户借给他人使用，否则用户应承担由此产生的全部责任，并与实际使用人承担连带责任。 </string>
    <string name="user_agreement_c14">\u3000\u3000如果发现任何非法使用等可能危及您的账户安全的情形时，您应当立即以有效方式通知本APP要求暂停相关服务，并向公安机关报案。您理解本APP对您的请求采取行动需要合理时间，本APP对在采取行动前已经产生的后果（包括但不限于您的任何损失）不承担任何责任。</string>
    <string name="user_agreement_c15">四、 用户信息的合理使用</string>
    <string name="user_agreement_c16">\u3000\u3000您同意本APP平台拥有通过邮件、短信电话等形式，向在本站注册用户发送信息等告知信息的权利。</string>
    <string name="user_agreement_c17">\u3000\u3000您了解并同意，本APP有权应国家司法、行政等主管部门的要求，向其提供您在本APP平台填写的注册信息和交易记录等必要信息</string>
</resources>