<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/main_blue"
        android:layout_height="60dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="恩"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@mipmap/top_enjia"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="家"
                android:textSize="20sp"
                android:textStyle="bold"/>



        </LinearLayout>
        <ImageView
            android:id="@+id/im_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/top_back_select"
            />
        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:text="@string/next"
            />
    </RelativeLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="《用户协议和隐私协议》"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/user_agreement_c1"
        android:layout_marginTop="10dp"
        android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/user_agreement_c2"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c3"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/user_agreement_c4"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c5"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/user_agreement_c6"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="2.1"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c7"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="2.2"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c8"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/user_agreement_c9"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="3.1"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c10"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="3.2"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c11"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="3.3"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c12"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="3.4"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c13"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="3.5"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c14"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/user_agreement_c15"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="4.1"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c16"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="4.2"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/user_agreement_c17"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/blow_menu_textcolor"/>
</LinearLayout>
</ScrollView>


</LinearLayout>
