<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/ly_blow_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">



        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:background="@android:color/transparent"
            android:textColor="@color/text_color_gray"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/offline_time_set"
            android:textColor="@color/blow_menu_textcolor"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_title" />
        <Button
            android:id="@+id/btn_bind_router"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/btn_ok"
            android:background="@android:color/transparent"
            android:textColor="@color/main_blue"
            android:textSize="12sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/line_gray_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">
        <com.xalianhui.wifimanage.ui.view.NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:id="@+id/numberPicker1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/offline_time_h"
            android:textColor="@color/blow_menu_textcolor"
            android:gravity="center"
            android:textSize="12sp"
             />
        <com.xalianhui.wifimanage.ui.view.NumberPicker
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/numberPicker2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/offline_time_min"
            android:layout_marginRight="20dp"
            android:textColor="@color/blow_menu_textcolor"
            android:gravity="center"
            android:textSize="12sp"
            />
    </LinearLayout>

</LinearLayout>